# blockchain

./: .gitignore
src/: BUILD.bazel  core.go  unit_core_test.go
src/consensus/: proof_of_stake.go  unit_consensus_test.go
